Reduzi o tamanho geral das coisas

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="./STYLE/style.css">
+    <link rel="stylesheet" href="styles/sass/style.css">
 
     <title>DEV WORKSTATION</title>
 </head>
@@ -26,8 +26,7 @@
     <header>
         <div class="container">
             <div>
-                <img src="IMG/logoDW.png" alt="Logo DW">
-                <h6>DEV WORKSTATION</h6>
+                <img src="img/logoDW.png" alt="Logo DW">
             </div>
         
             <nav>
@@ -53,12 +52,12 @@
                     <h3>Grandes clientes para uma grande empresa:</h3>
                 </div>
                 <div class="divImg">
-                    <img src="IMG/logo-raizen-4096.png" alt="Logo Raizen">
-                    <img src="IMG/logo-gol-4096.png" alt="Logo Gol">
-                    <img src="IMG/logo-intel-1024.png" alt="Logo Intel">
-                    <img src="IMG/logo-nissan-antigo-1024.png" alt="Logo Nissan">
-                    <img src="IMG/logo-bosch-4096.png" alt="Logo Bosch">
-                    <img src="IMG/logo-mcafee-1024.png" alt="Logo McAfee">
+                    <img src="img/logo-raizen-4096.png" alt="Logo Raizen">
+                    <img src="img/logo-gol-4096.png" alt="Logo Gol">
+                    <img src="img/logo-intel-1024.png" alt="Logo Intel">
+                    <img src="img/logo-nissan-antigo-1024.png" alt="Logo Nissan">
+                    <img src="img/logo-bosch-4096.png" alt="Logo Bosch">
+                    <img src="img/logo-mcafee-1024.png" alt="Logo McAfee">
                 </div>
             </div>
         </section>
@@ -68,18 +67,18 @@
                 <h2>NOS SOMOS A DEV WORKSTATION</h2>
                 <p>Ajudamos na transformação digital no mundo ao desenvolver soluções web, sistemas mobile e desktop, embarcados e automações</p>
             </article>
-            <img src="IMG/mapaMental.png" alt="Mapa Mental da Dev Workstation">
+            <img src="img/mapaMental.png" alt="Mapa Mental da Dev Workstation">
         </section>
 
         <section class="cards">
             <h2>AREAS QUE DESENVOLVEMOS SOLUÇÕES</h2>
             <div>
                 <div>
-                    <img src="IMG/imgMobile-removebg-preview.png" alt="Desenvolvimento Mobile">
+                    <img src="img/imgMobile-removebg-preview.png" alt="Desenvolvimento Mobile">
                     <h6>Mobile</h6>
                 </div>
                 <div id="cardWeb">
-                    <img src="IMG/imgWeb-removebg-preview.png" alt="Desenvolvimento Web">
+                    <img src="img/imgWeb-removebg-preview.png" alt="Desenvolvimento Web">
                     <h6>WEB</h6>
                 </div>
                 <div id="cardEmbarcados">
@@ -147,7 +146,7 @@
                 </ul>
             </nav>
             <div class="imgSection">
-                <img src="IMG/localizacao01.avif" alt="Localização">
+                <img src="img/localizacao01.avif" alt="Localização">
             </div>
         </div>
         <div class="copyrightSection">
