Alterados os cards do site

--- a/index.html
+++ b/index.html
@@ -70,27 +70,32 @@
             <img src="img/mapaMental.png" alt="Mapa Mental da Dev Workstation">
         </section>
 
-        <section class="cards">
-            <h2>AREAS QUE DESENVOLVEMOS SOLUÇÕES</h2>
-            <div>
-                <div>
-                    <img src="img/imgMobile-removebg-preview.png" alt="Desenvolvimento Mobile">
-                    <h6>Mobile</h6>
-                </div>
-                <div id="cardWeb">
-                    <img src="img/imgWeb-removebg-preview.png" alt="Desenvolvimento Web">
-                    <h6>WEB</h6>
-                </div>
-                <div id="cardEmbarcados">
-                    <img src="IMG/imgEmbarcados-removebg-preview.png" alt="Desenvolvimento Embarcados">
-                    <h6>Embarcados</h6>
-                </div>
-                <div id="cardDesktop">
-                    <img src="IMG/imgDesktop-removebg-preview.png" alt="Desenvolvimento Desktop">
-                    <h6>Desktop</h6>
-                </div>
+        <section class="areasDesenvolvimento">
+            <h2>Áreas de Desenvolvimento</h2>
+            <div class="categorias">
+              <div class="categoria" id="mobile">
+                <i class="icon-mobile"></i>
+                <h3>Mobile</h3>
+                <p>Desenvolvimento para aplicativos móveis.</p>
+              </div>
+              <div class="categoria" id="web">
+                <i class="icon-web"></i>
+                <h3>Web</h3>
+                <p>Desenvolvimento de websites e aplicações web.</p>
+              </div>
+              <div class="categoria" id="embarcados">
+                <i class="icon-embarcados"></i>
+                <h3>Embarcados</h3>
+                <p>Sistemas embarcados para hardware dedicado.</p>
+              </div>
+              <div class="categoria" id="desktop">
+                <i class="icon-desktop"></i>
+                <h3>Desktop</h3>
+                <p>Aplicações de software para desktops.</p>
+              </div>
             </div>
-        </section>
+          </section>
+          
 
         <section class="sobreNos">
             <h2>SOBRE NÓS</h2>
