Desenvolvendo a responsividade do site

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- Link CSS -->
     <link rel="stylesheet" href="styles/sass/style.css">
+    <link rel="stylesheet" href="styles/sass/responsividade.css">
 
     <title>DEV WORKSTATION</title>
 </head>
