Alterado a responsividade do site

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>DEV WORKSTATION</title>
 </head>
 <body>
-    <h1>teste</h1>
+    <h1>teste01</h1>
 
     <header>
         <div class="container">
