--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <h3>Grandes clientes para uma grande empresa:</h3>
                 </div>
                 <div class="divImg">
-                    <img src="logo-raizen-4096.png" alt="Logo Raizen">
+                    <img src="img/logo-raizen-4096.png" alt="Logo Raizen">
                     <img src="img/logo-gol-4096.png" alt="Logo Gol">
                     <img src="img/logo-intel-1024.png" alt="Logo Intel">
                     <img src="img/logo-nissan-antigo-1024.png" alt="Logo Nissan">
