Alteração da responsividade do site

--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
     <title>DEV WORKSTATION</title>
 </head>
 <body>
-    <h1>teste03</h1>
-
     <header>
         <div class="container">
           <div>
-            <img src="img/logoDW.png" alt="Logo DW">
+            <img src="img/logoDW.png" alt="Logo DW" id="logoHeader">
           </div>
       
           <nav>
