--- a/index.html
+++ b/index.html
@@ -158,10 +158,7 @@
             © 2024 Copyright: <a href="https://basilides.com.br/">ESCOLA TÉCNICA ESTADUAL PROFESSOR
     </footer>
 
-    <!-- Script do Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <!-- Script do TypeScript/JavaScript -->
+    <!-- Script do JavaScript -->
     <script src="javascript/script.js"></script>
 </body>
 </html>
