Tentativa de alteração de bug no footer na versão mobile

--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
             </div>
         </div>
         <div class="copyrightSection">
-            © 2024 Copyright: <a href="https://basilides.com.br/">ESCOLA TÉCNICA ESTADUAL PROFESSOR
+            © 2024 Copyright: <a href="https://basilides.com.br/">ESCOLA TÉCNICA ESTADUAL PROFESSOR BASILIDES</a>
+        </div>
     </footer>
 
     <!-- Script do JavaScript -->
